make chapter text larger

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         color:blue;
         font-weight: bold;
       }
+      .chapter{
+        font-size:larger;
+      }
+      input[type="checkbox"] {
+        transform: scale(1.7); /* Adjust the scaling factor as needed */
+        margin: 5px 10px 5px 0px; /* Optional: Add some spacing between checkbox and label */
+      }
     </style>
 
   </head>
